<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.alberto.uecarpi.LoginActivity"
    android:background="@drawable/abbafondoprueba">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txtContraseña"
        android:hint="@string/contr"
        android:layout_above="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:textColor="@color/abc_search_url_text_selected"
        android:textColorHint="@color/design_textinput_error_color_light"
        android:layout_marginBottom="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtEmail"
        android:hint="@string/email"
        android:textColorHint="@color/design_textinput_error_color_light"
        android:layout_above="@+id/txtContraseña"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:text="@string/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblLogin"
        android:textSize="34sp"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff" />

    <Button
        android:text="@string/logIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/btnLogin"
        android:onClick="btnLogin_click"

        android:layout_above="@+id/buttonRegister"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/abc_primary_text_disable_only_material_dark"
        android:background="@drawable/btn_redondo" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Registrase"
        android:id="@+id/buttonRegister"
        android:onClick="btnSignin_click"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/abc_primary_text_disable_only_material_dark"
        android:background="@drawable/btn_redondo"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="10dp"
        android:layout_alignRight="@+id/btnLogin"
        android:layout_alignEnd="@+id/btnLogin" />

</RelativeLayout>

