<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.alberto.uecarpi.SignInActivity"
    android:background="@drawable/abbafondoprueba">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/txtEmail"
        android:layout_alignRight="@+id/txtEmail"
        android:layout_alignEnd="@+id/txtEmail"
        android:layout_marginTop="15dp"
        android:id="@+id/txtContraseña"
        android:hint="@string/contr"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColorHint="@color/design_textinput_error_color_light" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtEmail"
        android:hint="@string/email"
        android:textColorHint="@color/design_textinput_error_color_light"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogin"
        android:onClick="btnSignin_click"
        android:allowUndo="true"
        android:background="@drawable/btn_redondo"
        android:textColor="@color/abc_primary_text_disable_only_material_dark"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="51dp" />
</RelativeLayout>